Add initial structure of the page

--- a/index.html
+++ b/index.html
@@ -10,18 +10,62 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>IG Portifolio</title>
+    <title>Ivan Gauto</title>
 </head>
 
 <body>
     <header>
         <img src="/logo.png" alt="logo">
+        <nav>
+            <div id="nav-menu">
+                <ul>
+                    <li>
+                        <a href="index.html" class="active">Home</a>
+                    </li>
+                    <li>
+                        <a href="#gallery">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="#tools">Tools</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <footer></footer>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="hero-heading">
+            <p>"Quotation from Architect"</p>
+        </div>
+    </section>
+    <section id="gallery">
+        <div id="projects-carrousel">
+            Carrousel elements go here
+        </div>
+    </section>
+    <section id="tools">
+        <div id="tools-level">
+            Icons with tools and proficiency bars
+        </div>
+    </section>
+    <section id="contact">
+        <div id="contact-details">
+            Contact details<br>
+            Email<br>
+            Phone<br>
+        </div>
+    </section>
+    <footer>
+        <div id="copyright">
+            Copyright 2023
+        </div>
+        <div id="social">
+            Social icons with links
+        </div>
+    </footer>
 </body>
 
 </html>
