--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="/logo.png" alt="logo">
+        <img src="/logo.png" alt="logo" id="logo">
         <nav>
             <div id="nav-menu">
                 <ul>
@@ -59,13 +59,42 @@
         </div>
     </section>
     <footer>
-        <div id="copyright">
-            Copyright 2023
+        <div class="footer-left">
+            Nothing here for now
         </div>
-        <div id="social">
-            Social icons with links
+        <div class="footer-center">
+            <ul>
+                <li>Copyright &copy; 2023 Ivan Gauto</li>
+                <li>All rights reserved</li>
+            </ul>
+        </div>
+        <div class="footer-right">
+            <ul class="footer-social-networks">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopeneer"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-square-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopeneer"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i
+                            class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopeneer"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopeneer"
+                        aria-label="Visit our Instagram page (opens in a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
+            </ul>
         </div>
     </footer>
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/bd59829f6e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
