--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <section id="hero-outer">
         <div id="hero-image"></div>
         <div id="hero-heading">
-            <p>"Quotation from Architect"</p>
+            <p>"Architecture is the learned game, correct and magnificent, of forms assembled in the light"</p>
+            <p>Le Corbusier</p>
         </div>
     </section>
     <section id="gallery">
