Added test project image and brief details

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     <section id="gallery">
         <div id="projects-carrousel">
             Carrousel elements go here
+            <div class="projects">
+                <h2>Project 1</h2>
+                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 1">
+                <p>Project Apartment</p>
+                <p>Brief description</p>
+                <p>2023</p>
+            </div>
         </div>
     </section>
     <section id="tools">
