--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -37,16 +38,16 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
-        <div id="hero-heading">
-            <p>"Architecture is the learned game, correct and magnificent, of forms assembled in the light"</p>
-            <p>Le Corbusier</p>
+        <div id="hero-text">
+            <h2>"Architecture is the learned game, correct and magnificent, of forms assembled in the light"</h2>
+            <h3>Le Corbusier</h3>
         </div>
     </section>
     <section id="gallery">
         <div id="projects-carrousel">
             Carrousel elements go here
             <div class="projects">
-                <h2>Project 1</h2>
+                <h3>Project 1</h3>
                 <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 1">
                 <p>Project Apartment</p>
                 <p>Brief description</p>
@@ -67,38 +68,25 @@
         </div>
     </section>
     <footer>
-        <div class="footer-left">
+        <div id="footer-left">
             Nothing here for now
         </div>
-        <div class="footer-center">
-            <ul>
-                <li>Copyright &copy; 2023 Ivan Gauto</li>
-                <li>All rights reserved</li>
-            </ul>
+        <div id="footer-center">
+            <span>Copyright &copy; 2023 - Ivan Gauto - All rights reserved</span>
         </div>
-        <div class="footer-right">
-            <ul class="footer-social-networks">
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopeneer"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-square-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopeneer"
-                        aria-label="Visit our Twitter page (opens in a new tab)"><i
-                            class="fa-brands fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://youtube.com" target="_blank" rel="noopeneer"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopeneer"
-                        aria-label="Visit our Instagram page (opens in a new tab)"><i
-                            class="fa-brands fa-instagram"></i></a>
-                </li>
-            </ul>
+        <div id="footer-right">
+            <span><a href="https://facebook.com" target="_blank" rel="noopeneer"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i
+                        class="fa-brands fa-square-facebook"></i></a></span>
+            <span><a href="https://twitter.com" target="_blank" rel="noopeneer"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-twitter"></i></a></span>
+            <span><a href="https://youtube.com" target="_blank" rel="noopeneer"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i
+                        class="fa-brands fa-youtube"></i></a></span>
+            <span><a href="https://instagram.com" target="_blank" rel="noopeneer"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a></span>
         </div>
     </footer>
     <!-- font awesome script-->
