--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         content="Ivan Gauto, architect, architecture, design, interior design, renders, lighting, art">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&family=Roboto:wght@100;700&display=swap"
+        rel="stylesheet">
 
     <title>Ivan Gauto</title>
 </head>
