Adjust footer elements and create projects/gallery section structure

--- a/index.html
+++ b/index.html
@@ -49,10 +49,30 @@
     </section>
     <section id="gallery">
         <div id="projects-carrousel">
-            Carrousel elements go here
-            <div class="projects">
+            <div id="project1" class="projects">
                 <h3>Project 1</h3>
                 <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 1">
+                <p>Project Apartment</p>
+                <p>Brief description</p>
+                <p>2023</p>
+            </div>
+            <div id="project2" class="projects">
+                <h3>Project 2</h3>
+                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 2">
+                <p>Project Apartment</p>
+                <p>Brief description</p>
+                <p>2023</p>
+            </div>
+            <div id="project3" class="projects">
+                <h3>Project 3</h3>
+                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 3">
+                <p>Project Apartment</p>
+                <p>Brief description</p>
+                <p>2023</p>
+            </div>
+            <div id="project4" class="projects">
+                <h3>Project 4</h3>
+                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 4">
                 <p>Project Apartment</p>
                 <p>Brief description</p>
                 <p>2023</p>
@@ -72,25 +92,23 @@
         </div>
     </section>
     <footer>
-        <div id="footer-left">
-            Nothing here for now
-        </div>
+        <div id="footer-left"></div>
         <div id="footer-center">
             <span>Copyright &copy; 2023 - Ivan Gauto - All rights reserved</span>
         </div>
         <div id="footer-right">
             <span><a href="https://facebook.com" target="_blank" rel="noopeneer"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i
-                        class="fa-brands fa-square-facebook"></i></a></span>
+                        class="social-netowrk-icons fa-brands fa-square-facebook"></i></a></span>
             <span><a href="https://twitter.com" target="_blank" rel="noopeneer"
                     aria-label="Visit our Twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-twitter"></i></a></span>
+                        class="social-netowrk-icons fa-brands fa-twitter"></i></a></span>
             <span><a href="https://youtube.com" target="_blank" rel="noopeneer"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i
-                        class="fa-brands fa-youtube"></i></a></span>
+                        class="social-netowrk-icons fa-brands fa-youtube"></i></a></span>
             <span><a href="https://instagram.com" target="_blank" rel="noopeneer"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a></span>
+                        class="social-netowrk-icons fa-brands fa-instagram"></i></a></span>
         </div>
     </footer>
     <!-- font awesome script-->
