Add tools section structure, icons and styling

--- a/index.html
+++ b/index.html
@@ -81,7 +81,36 @@
     </section>
     <section id="tools">
         <div id="tools-level">
-            Icons with tools and proficiency bars
+            <h4>Proficiency with the most common tools</h4>
+            <div id="ilustrator" class="tools-icons">
+                <a href="https://www.adobe.com/ie/products/illustrator.html" target="_blank" rel="noopeneer"
+                    aria-label="Adobe Ilustrator">
+                    <img src="/assets/images/tools_icons/ilustrator.png" alt="Adobe Ilustrator logo">
+                </a>
+                <img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+            </div>
+            <div id="photoshop" class="tools-icons">
+                <a href="https://www.adobe.com/ie/products/photoshop.html" target="_blank" rel="noopeneer"
+                    aria-label="Adobe Photoshop">
+                    <img src="/assets/images/tools_icons/photoshop.png" alt="Adobe Photoshop logo">
+                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+            </div>
+            <div id="revit" class="tools-icons">
+                <a href="https://www.autodesk.eu/products/revit/overview?term=1-YEAR&tab=subscription&plc=RVT#overview_panel_thumbnail"
+                    target="_blank" rel="noopeneer" aria-label="Autodesk Revit">
+                    <img src="/assets/images/tools_icons/revit.png" alt="Autodesk Revit logo">
+                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+            </div>
+            <div id="twinmotion" class="tools-icons">
+                <a href="https://www.twinmotion.com/en-US" target="_blank" rel="noopeneer" aria-label="Twinmotion">
+                    <img src="/assets/images/tools_icons/twinmotion.png" alt="Twinmotion logo">
+                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+            </div>
+            <div id="unreal" class="tools-icons">
+                <a href="https://www.unrealengine.com/en-US" target="_blank" rel="noopeneer" aria-label="Unreal Engine">
+                    <img src="/assets/images/tools_icons/unreal.png" alt="Unreal Engine logo">
+                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+            </div>
         </div>
     </section>
     <section id="contact">
