Adjust spacing in between sections

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     </section>
     <section id="gallery">
         <div id="projects-carrousel">
+            <h3>Presenting some of my projects</h3>
+            <br>
+            <br>
             <div id="project1" class="projects">
                 <h3>Project 1</h3>
                 <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 1">
@@ -58,22 +61,22 @@
             </div>
             <div id="project2" class="projects">
                 <h3>Project 2</h3>
-                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 2">
-                <p>Project Apartment</p>
+                <img class="thumbnail" src="/assets/images/argentina/argentina1.jpg" alt="image project 2">
+                <p>Project Argentina</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project3" class="projects">
                 <h3>Project 3</h3>
-                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 3">
-                <p>Project Apartment</p>
+                <img class="thumbnail" src="/assets/images/bread_street/bread_street_1.png" alt="image project 3">
+                <p>Project Bread Street</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project4" class="projects">
                 <h3>Project 4</h3>
-                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 4">
-                <p>Project Apartment</p>
+                <img class="thumbnail" src="/assets/images/argentina/argentina2.jpg" alt="image project 4">
+                <p>Project Argentina2</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
@@ -81,7 +84,9 @@
     </section>
     <section id="tools">
         <div id="tools-level">
-            <h4>Proficiency with the most common tools</h4>
+            <h3>Proficiency with the most common tools</h3>
+            <br>
+            <br>
             <div id="ilustrator" class="tools-icons">
                 <a href="https://www.adobe.com/ie/products/illustrator.html" target="_blank" rel="noopeneer"
                     aria-label="Adobe Ilustrator">
