Fix image path to show in gitbut pages

--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
             <br>
             <div id="project1" class="projects">
                 <h3>Project 1</h3>
-                <img class="thumbnail" src="/assets/images/apartment/apartment1.png" alt="image project 1">
+                <img class="thumbnail" src="./assets/images/apartment/apartment1.png" alt="image project 1">
                 <p>Project Apartment</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project2" class="projects">
                 <h3>Project 2</h3>
-                <img class="thumbnail" src="/assets/images/argentina/argentina1.jpg" alt="image project 2">
+                <img class="thumbnail" src="./assets/images/argentina/argentina1.jpg" alt="image project 2">
                 <p>Project Argentina</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project3" class="projects">
                 <h3>Project 3</h3>
-                <img class="thumbnail" src="/assets/images/bread_street/bread_street_1.png" alt="image project 3">
+                <img class="thumbnail" src="./assets/images/bread_street/bread_street_1.png" alt="image project 3">
                 <p>Project Bread Street</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project4" class="projects">
                 <h3>Project 4</h3>
-                <img class="thumbnail" src="/assets/images/argentina/argentina2.jpg" alt="image project 4">
+                <img class="thumbnail" src="./assets/images/argentina/argentina2.jpg" alt="image project 4">
                 <p>Project Argentina2</p>
                 <p>Brief description</p>
                 <p>2023</p>
@@ -90,31 +90,31 @@
             <div id="ilustrator" class="tools-icons">
                 <a href="https://www.adobe.com/ie/products/illustrator.html" target="_blank" rel="noopeneer"
                     aria-label="Adobe Ilustrator">
-                    <img src="/assets/images/tools_icons/ilustrator.png" alt="Adobe Ilustrator logo">
+                    <img src="./assets/images/tools_icons/ilustrator.png" alt="Adobe Ilustrator logo">
                 </a>
-                <img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                <img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
             </div>
             <div id="photoshop" class="tools-icons">
                 <a href="https://www.adobe.com/ie/products/photoshop.html" target="_blank" rel="noopeneer"
                     aria-label="Adobe Photoshop">
-                    <img src="/assets/images/tools_icons/photoshop.png" alt="Adobe Photoshop logo">
-                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                    <img src="./assets/images/tools_icons/photoshop.png" alt="Adobe Photoshop logo">
+                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
             </div>
             <div id="revit" class="tools-icons">
                 <a href="https://www.autodesk.eu/products/revit/overview?term=1-YEAR&tab=subscription&plc=RVT#overview_panel_thumbnail"
                     target="_blank" rel="noopeneer" aria-label="Autodesk Revit">
-                    <img src="/assets/images/tools_icons/revit.png" alt="Autodesk Revit logo">
-                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                    <img src="./assets/images/tools_icons/revit.png" alt="Autodesk Revit logo">
+                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
             </div>
             <div id="twinmotion" class="tools-icons">
                 <a href="https://www.twinmotion.com/en-US" target="_blank" rel="noopeneer" aria-label="Twinmotion">
-                    <img src="/assets/images/tools_icons/twinmotion.png" alt="Twinmotion logo">
-                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                    <img src="./assets/images/tools_icons/twinmotion.png" alt="Twinmotion logo">
+                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
             </div>
             <div id="unreal" class="tools-icons">
                 <a href="https://www.unrealengine.com/en-US" target="_blank" rel="noopeneer" aria-label="Unreal Engine">
-                    <img src="/assets/images/tools_icons/unreal.png" alt="Unreal Engine logo">
-                </a><img src="/assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                    <img src="./assets/images/tools_icons/unreal.png" alt="Unreal Engine logo">
+                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
             </div>
         </div>
     </section>
