Adjust styling of the projects section and tools icons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img src="/logo.png" alt="logo" id="logo">
+        <img src="./logo.png" alt="logo" id="logo">
         <nav>
             <div id="nav-menu">
                 <ul>
@@ -49,33 +49,29 @@
     </section>
     <section id="gallery">
         <div id="projects-carrousel">
-            <h3>Presenting some of my projects</h3>
+            <h2>Presenting some of my projects</h2>
             <br>
             <br>
             <div id="project1" class="projects">
-                <h3>Project 1</h3>
                 <img class="thumbnail" src="./assets/images/apartment/apartment1.png" alt="image project 1">
                 <p>Project Apartment</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project2" class="projects">
-                <h3>Project 2</h3>
-                <img class="thumbnail" src="./assets/images/argentina/argentina1.jpg" alt="image project 2">
+                <img class="thumbnail" src="./assets/images/apartment/apartment2.png" alt="image project 2">
                 <p>Project Argentina</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project3" class="projects">
-                <h3>Project 3</h3>
                 <img class="thumbnail" src="./assets/images/bread_street/bread_street_1.png" alt="image project 3">
                 <p>Project Bread Street</p>
                 <p>Brief description</p>
                 <p>2023</p>
             </div>
             <div id="project4" class="projects">
-                <h3>Project 4</h3>
-                <img class="thumbnail" src="./assets/images/argentina/argentina2.jpg" alt="image project 4">
+                <img class="thumbnail" src="./assets/images/bread_street/bread_street_2.png" alt="image project 4">
                 <p>Project Argentina2</p>
                 <p>Brief description</p>
                 <p>2023</p>
@@ -92,29 +88,58 @@
                     aria-label="Adobe Ilustrator">
                     <img src="./assets/images/tools_icons/ilustrator.png" alt="Adobe Ilustrator logo">
                 </a>
-                <img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
             </div>
             <div id="photoshop" class="tools-icons">
                 <a href="https://www.adobe.com/ie/products/photoshop.html" target="_blank" rel="noopeneer"
                     aria-label="Adobe Photoshop">
                     <img src="./assets/images/tools_icons/photoshop.png" alt="Adobe Photoshop logo">
-                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                </a>
+            </div>
+            <div id="indesign" class="tools-icons">
+                <a href="https://www.adobe.com/ie/products/indesign.html" target="_blank" rel="noopeneer"
+                    aria-label="Adobe Indesign">
+                    <img src="./assets/images/tools_icons/indesign.png" alt="Indesign logo">
+                </a>
             </div>
             <div id="revit" class="tools-icons">
                 <a href="https://www.autodesk.eu/products/revit/overview?term=1-YEAR&tab=subscription&plc=RVT#overview_panel_thumbnail"
                     target="_blank" rel="noopeneer" aria-label="Autodesk Revit">
                     <img src="./assets/images/tools_icons/revit.png" alt="Autodesk Revit logo">
-                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                </a>
             </div>
             <div id="twinmotion" class="tools-icons">
                 <a href="https://www.twinmotion.com/en-US" target="_blank" rel="noopeneer" aria-label="Twinmotion">
                     <img src="./assets/images/tools_icons/twinmotion.png" alt="Twinmotion logo">
-                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                </a>
             </div>
             <div id="unreal" class="tools-icons">
                 <a href="https://www.unrealengine.com/en-US" target="_blank" rel="noopeneer" aria-label="Unreal Engine">
                     <img src="./assets/images/tools_icons/unreal.png" alt="Unreal Engine logo">
-                </a><img src="./assets/images/tools_icons/level.png" alt="bar indicating level of proficiency">
+                </a>
+            </div>
+            <div id="3dsmax" class="tools-icons">
+                <a href="https://www.autodesk.eu/products/3ds-max/overview?mktvar002=4417848|SEM|18880029258|142956061346|kwd-10085200&term=1-YEAR&tab=subscription&plc=3DSMAX#overview_panel_thumbnail"
+                    target="_blank" rel="noopeneer" aria-label="3DSmax">
+                    <img src="./assets/images/tools_icons/3dsmax.png" alt="3DSmax logo">
+                </a>
+            </div>
+            <div id="autocad" class="tools-icons">
+                <a href="https://www.autodesk.eu/products/autocad/overview?panel=buy&AID=11087035&PID=8299312&SID=jkp_CjwKCAjwwb6lBhBJEiwAbuVUSokB_jLXhGoT6nhhsaRRfqsxuluPR6gJeAqYlNg7bA2ymN9Zn2MGYRoC924QAvD_BwE&cjevent=b1b1746921a211ee8019146d0a18ba74&mktvar002=afc_eu_deeplink&affname=8299312_11087035&cjdata=MXxZfDB8WXww&term=1-YEAR&tab=subscription&plc=ACDIST#overview"
+                    target="_blank" rel="noopeneer" aria-label="3DSmax">
+                    <img src="./assets/images/tools_icons/autocad.png" alt="Autocad logo">
+                </a>
+            </div>
+            <div id="vector" class="tools-icons">
+                <a href="https://customers.vectorworks.net/subscriptions" target="_blank" rel="noopeneer"
+                    aria-label="vector">
+                    <img src="./assets/images/tools_icons/vectorworks.png" alt="vector logo">
+                </a>
+            </div>
+            <div id="vray" class="tools-icons">
+                <a href="https://customers.vectorworks.net/subscriptions" target="_blank" rel="noopeneer"
+                    aria-label="vray">
+                    <img src="./assets/images/tools_icons/vray.png" alt="vray logo">
+                </a>
             </div>
         </div>
     </section>
