Styling layout details on nav and projects section

--- a/index.html
+++ b/index.html
@@ -48,33 +48,26 @@
         </div>
     </section>
     <section id="gallery">
-        <div id="projects-carrousel">
+        <div id="projects-pool">
             <h2>Presenting some of my projects</h2>
             <br>
             <br>
             <div id="project1" class="projects">
                 <img class="thumbnail" src="./assets/images/apartment/apartment1.png" alt="image project 1">
-                <p>Project Apartment</p>
-                <p>Brief description</p>
-                <p>2023</p>
+                <p>Project Apartment<br>Brief description<br>2023</p>
+                
             </div>
             <div id="project2" class="projects">
                 <img class="thumbnail" src="./assets/images/apartment/apartment2.png" alt="image project 2">
-                <p>Project Argentina</p>
-                <p>Brief description</p>
-                <p>2023</p>
+                <p>Project Apartment<br>Brief description<br>2023</p>
             </div>
             <div id="project3" class="projects">
                 <img class="thumbnail" src="./assets/images/bread_street/bread_street_1.png" alt="image project 3">
-                <p>Project Bread Street</p>
-                <p>Brief description</p>
-                <p>2023</p>
+                <p>Project Apartment<br>Brief description<br>2023</p>
             </div>
             <div id="project4" class="projects">
                 <img class="thumbnail" src="./assets/images/bread_street/bread_street_2.png" alt="image project 4">
-                <p>Project Argentina2</p>
-                <p>Brief description</p>
-                <p>2023</p>
+                <p>Project Apartment<br>Brief description<br>2023</p>
             </div>
         </div>
     </section>
