Adjust hero image, spacing and fonts for projects section and add contacts section details and styling

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
         </nav>
     </header>
     <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="hero-text">
-            <h1>"Architecture is the learned game, correct and magnificent, of forms assembled in the light"</h1>
-            <h3>Le Corbusier</h3>
+        <div id="hero-image">
+            <!-- REF: image taken from Adobe Firefly Generative AI -->
+            <img src="./assets/images/hero-image.png" alt="hero banner">
+            <div id="hero-text">
+                <h1>"Architecture is the learned game, correct and magnificent, of forms assembled in the light"</h1>
+                <h3>Le Corbusier</h3>
+            </div>
         </div>
     </section>
     <section id="gallery">
@@ -55,7 +58,7 @@
             <div id="project1" class="projects">
                 <img class="thumbnail" src="./assets/images/apartment/apartment1.png" alt="image project 1">
                 <p>Project Apartment<br>Brief description<br>2023</p>
-                
+
             </div>
             <div id="project2" class="projects">
                 <img class="thumbnail" src="./assets/images/apartment/apartment2.png" alt="image project 2">
@@ -138,9 +141,31 @@
     </section>
     <section id="contact">
         <div id="contact-details">
-            Contact details<br>
-            Email<br>
-            Phone<br>
+            <div id="contact-details-header">
+                <h2>CONTACT</h2>
+                <p>If you have a project in mind or if you are passionate for architecture like me<br>I'd love to hear
+                    from you</p>
+            </div>
+            <div id="phone" class="contact-items">
+                <span>
+                    <i class="contact-icons fa-solid fa-phone"></i>
+                </span>
+                <p>+353 089 205 0606</p>
+            </div>
+            <div id="whatsapp" class="contact-items">
+                <span><i class="contact-icons fa-brands fa-whatsapp"></i></span>
+                <p>+353 089 205 0606</p>
+            </div>
+            <div id="email" class="contact-items">
+                <span><i class="contact-icons fa-regular fa-at"></i></span>
+                <p>ivangauto@email.com</p>
+            </div>
+            <div id="linkedin" class="contact-items">
+                <span><a href="https://www.linkedin.com/in/ivan-gauto/" target="_blank" rel="noopeneer"
+                        aria-label="Visit my Linkedin page (opens in a new tab)"><i
+                            class="contact-icons fa-brands fa-linkedin"></i></a></span>
+                <p>linkedin/in/ivanguato</p>
+            </div>
         </div>
     </section>
     <footer>
